[BACKEND] modify | modify jwt filter and add feat with category_LOST42-48